source/error/20200005/25_error.txt
/home/yenoh/term_project_2/source/STD_DIR/20200005/25.c: In function ‘main’:
/home/yenoh/term_project_2/source/STD_DIR/20200005/25.c:16:21: error: ‘ssu_signal’ undeclared (first use in this function); did you mean ‘ssignal’?
   16 |     signal(SIGUSR1, ssu_signal);
      |                     ^~~~~~~~~~
      |                     ssignal
/home/yenoh/term_project_2/source/STD_DIR/20200005/25.c:16:21: note: each undeclared identifier is reported only once for each function it appears in
